Thu Aug 24 01:02:02 MEST 2000   Raphael Manfredi <Raphael_Manfredi@pobox.com>

. Description:


	ANSI-fied most of the code, preparing for Perl core integration.
	The next version of Storable will be 0.8, and will be integrated
	into the Perl core (development branch).

	Dispatch tables were moved upfront to relieve some compilers,
	especially on AIX and Windows platforms.

	Merged 64-bit fixes from perl5-porters.

Mon Aug 14 09:22:04 MEST 2000   Raphael Manfredi <Raphael_Manfredi@pobox.com>

. Description:

	Added a refcnt dec in retrieve_tied_key(): sv_magic() increases
	the refcnt on the mg_ptr as well.

	Removed spurious dependency to Devel::Peek, which was used for
	testing only in t/tied_items.t.  Thanks to Conrad Heiney
	<conrad@fringehead.org> for spotting it first.

Sun Aug 13 22:12:59 MEST 2000   Raphael Manfredi <Raphael_Manfredi@pobox.com>

. Description:

	Marc Lehmann kindly contributed code to add overloading support
	and to handle references to tied variables.

	Rewrote leading blurb about compatibility to make it clearer what
	"backward compatibility" is about: when I say 0.7 is backward
	compatible with 0.6, it means the revision 0.7 can read files
	produced by 0.6.

	Mention new Clone(3) extension in SEE ALSO.

	Was wrongly optimizing for "undef" values in hashes by not
	fully recursing: as a result, tied "undef" values were incorrectly
	serialized.

Sun Jul 30 12:59:17 MEST 2000   Raphael Manfredi <Raphael_Manfredi@pobox.com>

	First revision of Storable 0.7.

	The serializing format is new, known as version 2.0.  It is fully
	backward compatible with 0.6.  Earlier formats are deprecated and
	have not even been tested: next version will drop pre-0.6 format.

	Changes since 0.6@11:

	- Moved interface to the "beta" status.  Some tiny parts are still
	  subject to change, but nothing important enough to warrant an "alpha"
	  status any longer.

	- Slightly reduced the size of the Storable image by factorizing