@@ -1,16 +1,13 @@
-# $Id: Makefile.PL,v 0.7.1.1 2000/08/23 22:49:18 ram Exp $
+# $Id: Makefile.PL,v 1.0 2000/09/01 19:40:41 ram Exp $
 #
 #  Copyright (c) 1995-2000, Raphael Manfredi
 #  
-#  You may redistribute only under the terms of the Artistic License,
-#  as specified in the README file that comes with the distribution.
+#  You may redistribute only under the same terms as Perl 5, as specified
+#  in the README file that comes with the distribution.
 #
 # $Log: Makefile.PL,v $
-# Revision 0.7.1.1  2000/08/23 22:49:18  ram
-# patch3: added MAN3PODS
-#
-# Revision 0.7  2000/08/03 22:04:44  ram
-# Baseline for second beta release.
+# Revision 1.0  2000/09/01 19:40:41  ram
+# Baseline for first official release.
 #
 
 use ExtUtils::MakeMaker;
@@ -19,7 +16,7 @@ use Config;
 WriteMakefile(
     'NAME'			=> 'Storable',
     'DISTNAME'		=> "Storable",
-    'MAN3PODS'		=> {},
+	'MAN3PODS'		=> {},
     'VERSION_FROM'	=> 'Storable.pm',
     'dist'			=> { SUFFIX => 'gz', COMPRESS => 'gzip -f' },
     'clean'			=> {'FILES' => '*%'},
